// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PortfolioPageInner > connected user view > should render correctly with banner hidden 1`] = `
<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_pt-_sm_t-space-spa94665593 _pr-_sm_t-space-spa94665593 _pb-_sm_t-space-spa94665593 _pl-_sm_t-space-spa94665593 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa1360333989 _width-10037 _pt-t-space-non101 _pr-t-space-spa1360334047 _pb-t-space-spa1360334047 _pl-t-space-spa1360334047 _position-relative"
    >
      <div
        data-scroll-y="200"
        data-testid="portfolio-header"
      >
        Portfolio Header Mock
      </div>
      <div
        data-testid="portfolio-content"
      >
        Portfolio Content Mock
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`PortfolioPageInner > connected user view > should render correctly with banner visible 1`] = `
<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_pt-_sm_t-space-spa94665593 _pr-_sm_t-space-spa94665593 _pb-_sm_t-space-spa94665593 _pl-_sm_t-space-spa94665593 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa1360333989 _width-10037 _pt-t-space-non101 _pr-t-space-spa1360334047 _pb-t-space-spa1360334047 _pl-t-space-spa1360334047 _position-relative"
    >
      <div
        data-scroll-y="0"
        data-testid="portfolio-header"
      >
        Portfolio Header Mock
      </div>
      <div
        data-testid="portfolio-content"
      >
        Portfolio Content Mock
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`PortfolioPageInner > demo view (disconnected) > should render demo view with bottom margin 1`] = `
<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_pt-_sm_t-space-spa94665593 _pr-_sm_t-space-spa94665593 _pb-_sm_t-space-spa94665593 _pl-_sm_t-space-spa94665593 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa1360333989 _width-10037 _pt-t-space-non101 _pr-t-space-spa1360334047 _pb-t-space-spa1360334047 _pl-t-space-spa1360334047 _position-relative _mb-100px"
    >
      <div
        data-testid="connect-wallet-banner"
      >
        Connect Wallet Banner Mock
      </div>
      <div
        data-should-show="true"
        data-testid="connect-wallet-button"
      >
        Connect Wallet Button Mock
      </div>
      <div
        data-testid="portfolio-header"
      >
        Portfolio Header Mock
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _cursor-not-allowed"
      >
        <div
          data-disabled="true"
          data-testid="portfolio-content"
        >
          Portfolio Content Mock
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`PortfolioPageInner > demo view (disconnected) > should render demo view with connect wallet banner 1`] = `
<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_pt-_sm_t-space-spa94665593 _pr-_sm_t-space-spa94665593 _pb-_sm_t-space-spa94665593 _pl-_sm_t-space-spa94665593 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-spa1360333989 _width-10037 _pt-t-space-non101 _pr-t-space-spa1360334047 _pb-t-space-spa1360334047 _pl-t-space-spa1360334047 _position-relative"
    >
      <div
        data-testid="connect-wallet-banner"
      >
        Connect Wallet Banner Mock
      </div>
      <div
        data-should-show="false"
        data-testid="connect-wallet-button"
      >
        Connect Wallet Button Mock
      </div>
      <div
        data-testid="portfolio-header"
      >
        Portfolio Header Mock
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _cursor-not-allowed"
      >
        <div
          data-disabled="true"
          data-testid="portfolio-content"
        >
          Portfolio Content Mock
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;
